# qq

./: README.md
app-debug/: README.md  anti_frida_detect.js  anti_frida_detect_simple.js  anti_frida_detect_ultimate.js  cmodule_advanced.js  cmodule_crypto_hook.js  cmodule_inline_hook.js  cmodule_simple.js  frida_17x_check_report.txt  hook_10_hexdump_advanced.js  hook_10_hexdump_simple.js  hook_11_open_advanced.js  hook_11_open_simple.js  hook_12_redirect_advanced.js  hook_12_redirect_simple.js  hook_13_cpp_string_advanced.js  hook_13_cpp_string_simple.js  hook_13_jni_complete.js  hook_14_all_licenses_advanced.js  hook_14_all_licenses_simple.js  hook_14_direct_call.js  hook_15_memory_scan_advanced.js  hook_15_memory_search_simple.js  hook_16_call_crypto_advanced.js  hook_16_call_crypto_simple.js  hook_16_crypto_manual.js  hook_17_memory_patch.js  hook_17_patch_advanced.js  hook_17_patch_simple.js  hook_1_secret_advanced.js  hook_1_secret_simple.js  hook_2_canLogin_advanced.js  hook_2_canLogin_simple.js  hook_3_isPremium.js  hook_3_isPremium_advanced.js  hook_3_isPremium_simple.js  hook_4_encrypt_advanced.js  hook_4_encrypt_simple.js  hook_5_active_call_advanced.js  hook_5_active_call_simple.js  (+13 more)
vpn检测算法/: Cargo.toml  README.md  config.py  packet_processor.cpp  packet_processor.hpp  start_system.py  test_integration.py  vpn_detection_test_report.md
vpn检测算法/cmd/api-gateway/: main.go
京东商城/: FEATURE_SUMMARY.md  LOGIN_GUIDE.md  PACKAGING.md  README.md  README_EXE.md  UPDATE_LOG.md  build.bat  build.sh  build_exe.py  config.py  crawl_jd_categories.py  crawl_jd_phones.py  (+14 more)
(+51 files in other folders)
